k8s-manager-ksc/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kibana"
  namespace: "default"
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 77.137.89.11
    #kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  labels:
    app: kibana
spec:
  rules:
  - host: kibana.xmaxfr.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: kibana-es
          servicePort: 5601
  - host: es.xmaxfr.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: elasticsearch-elasticsearch-coordinating-only
          servicePort: 9200
